# deeptech

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  Makefile  README-TOOLS.md  api-endpoints.yaml  deploy.sh  docker-compose.yml  railway.json
.github/workflows/: backend-ci.yaml  mypy-check.yaml  ruff-check.yaml
backend/: .dockerignore  .env.example  Dockerfile  main.py  migrate_existing_s3_files.py  prompts.yaml  pyproject.toml
backend/app/: config.py
backend/app/core/: auth.py  db_adapter.py  db_handler.py  db_init.py
backend/app/models/: __init__.py  chat.py  contract_audit.py  database.py  dora_audit.py  requests.py  responses.py  user_profile.py  vendor.py  vendor_qualification.py
backend/app/utils/: async_utils.py  dependency_analyzer.py  generate.py  generation_tracker.py  helper_functions.py  json_loader.py  prompt_loader.py  retrieve.py  search.py  textract_extractor.py
backend/data/checklists/: dora_vendor_contract.json  general_it_contract.json  outsourcing_contract.json
backend/data/databases/: MiCA_Report_2025-09-15.docx  index-api.html  schema.html  schema.md  schema.txt
backend/data/dora/: ict_services_types.json
backend/data/json/: dtidata.json  guidelines_art.json  guidelines_emt.json  guidelines_oth.json  subquestions_art.json  subquestions_emt.json  subquestions_oth.json  whitepaper_fields_art.json  whitepaper_fields_emt.json  whitepaper_fields_oth.json
backend/data/test_data/: dummy_data.py
backend/eval/: eval_subquestions.py
backend/tests/: README.md  conftest.py
backend/tests/unit/: test_generate_a11.py  test_generate_d4.py  test_generate_e4.py  test_generate_e9.py
k8s/: README.md  backend-deployment.yaml  configmap.yaml  frontend-deployment.yaml  ingress-backend-api.yaml  ingress-backend-upload.yaml  ingress-frontend.yaml  namespace.yaml  pvc-backend.yaml  secrets.yaml
postgres-init/: 01-create-dbs.sh  01-create-dbs.sql
